# arpc-proxy

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: docker.yml
config/: default.toml  default.yaml
src/: lib.rs  main.rs  state.rs
src/auth/: middleware.rs  mod.rs  model.rs  repository.rs
src/config/: settings.rs
src/error/: mod.rs
src/handlers/: auth.rs  chain.rs  health.rs  mod.rs  proxy.rs  rpc.rs
src/models/: chain.rs  rpc.rs
src/providers/: jsonrpc.rs  mod.rs  rest.rs
