[package]
name = "arpc-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", features = ["json"] }

config = { version = "0.15", features = ["toml"] }

thiserror = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
